==> nguyenkhanhtung89/bk10/BK10-DVBK/MCU-ST/BootLoader - RTX/src/Serial.c <==
#include "Serial.h"
#include "osObjects.h"
#include "string.h"
#include "stdio.h"
#include "stdlib.h"
#include "utils.h"
#include "fw.h"

static void Serial_Parse(uint8_t* msg, uint8_t Len){
	if(!strncmp((char*)msg, "GOTO_BOOT_MODE", 14) || !strncmp((char*)msg, "VERSION?", 8)){
		res_msg[0] = '>';
		res_msg[1] = '>';
		res_msg[2] = 'B';
		res_msg[3] = 'O';
		res_msg[4] = 'O';
		res_msg[5] = 'T';		
		SerialPushBufferWithCS(res_msg, 6);
	}else if(msg[0] == 0xFF){//> 0xFF NPKG  CRC
		int res = 0;
		res = FirmwareInfoParse(msg + 1);
		if((res == 0) || (res == -2)){
			SerialPushBufferWithCS((uint8_t*)">>OK", 4);
		}else{
			SerialPushBufferWithCS((uint8_t*)">>ERROR", 7);
		}
	}else if(msg[0] == 0xFD){//> 0xFD ID LEN CRC DATA
		FirmwarePackageParse(msg + 1);
	}
}

void vSerialTask(const void* args){
	osEvent evt;
	Serial_Mail_Typedef* msg;
	u8 cs = 0;
		
	/* Init usart */
	SerialUARTInit();
	
	SerialPushStr("MCU BOOTLOADER V1.0", END_LF);
	
	for(;;){
		/* Wait GSM message */
		evt = osMailGet(SerialPkgMailBox, 1000);//wait data
		if(evt.status == osEventMail){
			/* Get message*/
			msg = (Serial_Mail_Typedef*)evt.value.p;
			
			//process data
			if(msg->data[0] == '>'){
				cs = CRC_8BitsCompute(msg->data, msg->size - 1);
				if(cs == msg->data[msg->size - 1]){
					Serial_Parse((msg->data + 1), (msg->size - 2));
				}
			}
			
			/* Free data block mail box */
			osMailFree(SerialPkgMailBox, msg);
		}
		
		osThreadYield();
	}
}

void UART_SendByte(USART_TypeDef* USARTx, uint8_t data){
	int32_t tick, delayPeriod;
	tick = osKernelSysTick(); // get start value of the Kernel system tick
	delayPeriod = osKernelSysTickMicroSec(50 * 1000);//50ms timeout
	
	/* Wait for USART Tx buffer empty */
	while((USART_GetFlagStatus(USARTx, USART_FLAG_TXE) == RESET) && (osKernelSysTick() - tick) < delayPeriod);
	/* Send byte through the UART peripheral */
	USART_SendData(USARTx, data);
}

void SerialUARTInit(void){
	GPIO_InitTypeDef GPIO_InitStructure;
	USART_InitTypeDef USART_InitStructure;
	
	/* Enable USART_COM GPIO clock */
	RCC_AHBPeriphClockCmd(USART_COM_GPIO_CLK_TX, ENABLE);
	RCC_AHBPeriphClockCmd(USART_COM_GPIO_CLK_RX, ENABLE);
	
	/* Enable USART_COM Clock */
	RCC_APB2PeriphClockCmd(USART_COM_CLK, ENABLE);
	
	/* CFG AF mode */
	GPIO_InitStructure.GPIO_Mode 	= GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd 	= GPIO_PuPd_NOPULL;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	
	/* Configure USART_COM_Tx */
	GPIO_InitStructure.GPIO_Pin = USART_COM_TxPin;
	GPIO_Init(USART_COM_GPIO_TX, &GPIO_InitStructure);
	GPIO_PinAFConfig(USART_COM_GPIO_TX, USART_COM_TxPinSource, USART_COM_AF);
	
	/* Configure USART_COM_Rx */
	GPIO_InitStructure.GPIO_Pin = USART_COM_RxPin;
	GPIO_Init(USART_COM_GPIO_RX, &GPIO_InitStructure);
	GPIO_PinAFConfig(USART_COM_GPIO_RX, USART_COM_RxPinSource, USART_COM_AF);
	
	/* USART_COM configuration*/
	USART_StructInit(&USART_InitStructure);
	USART_InitStructure.USART_BaudRate = 230400;
	USART_Init(USART_COM, &USART_InitStructure);
	
  USART_ITConfig(USART_COM, USART_IT_RXNE, ENABLE);
	USART_Cmd(USART_COM, ENABLE);
	
	NVIC_EnableIRQ(USART_COM_IRQn);
}
